--- a/static/css/strike.css
+++ b/static/css/strike.css
@@ -16,7 +16,7 @@ body {
     text-align: center;
     width: 100%;
     height: 100%;
-    border: solid cornflowerblue 4px;
+    border: solid blue 4px;
     margin-top: -5px;
     margin-left: -5px;
 }
