--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,6 +1,6 @@
 <div class="board">
-  <div class="row" *ngFor="let row of pieces">
-    <div class="cell" *ngFor="let cell of pieces">
+  <div class="row" *ngFor="let row of cells">
+    <div class="cell" *ngFor="let cell of row">
 
     </div>
   </div>
