Rendered basic pieces.

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -2,8 +2,10 @@
   <div class="row" *ngFor="let row of cells">
     <div class="cell" *ngFor="let cell of row">
 
+      <!-- TODO: Render terrain once supported. -->
+
+      <!-- Render the piece. -->
+      <app-piece [piece]="cell.getPiece()"></app-piece>
     </div>
   </div>
 </div>
-
-
