--- a/src/app/cell/cell.component.css
+++ b/src/app/cell/cell.component.css
@@ -6,12 +6,12 @@
 }
 
 .cell-selected {
-  border: solid black 4px;
-  width: 100%;
-  height: 100%;
-  margin-left: -4px;
-  margin-top: -4px;
-  position: relative;
+  border: solid black 6px;
+  width: 100px;
+  height: 100px;
+  margin-left: -5px;
+  margin-top: -5px;
+  position: absolute;
 }
 
 .cell:hover {
