Basic player rendering

--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,4 +1,10 @@
+.board {
+  /* Unsure about this display value. */
+  display: inline-grid;
+}
+
 .row {
+  display: inline-block;
   margin: 0;
 }
 
