Added Horizon font

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
+@font-face {
+    font-family: Horizon;
+    src: url(Horizon-nMeM.ttf);
+}
+
 body {
+    font-family: Horizon;
     text-align: center;
     margin: 0;
     width: 100%;
