--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -1,4 +1,16 @@
 .player {
     display: inline-block;
     width: 400px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /* Placeholder border to avoid dom shifting. */
+    border: 4px solid transparent;
+}
+
+.player.active {
+    border: 4px solid;
+}
+
+.player-name {
+    font-size: 30px;
 }
