--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
-<div class="player">
+<div [ngClass]="{'player': true, 'active': player.isActive()}">
     <div class="player-name">
         {{player.name}}
     </div>
