--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,10 @@
-<div [ngClass]="{'player': true, 'active': player.isActive()}">
+<div
+    [ngClass]="{
+      'player': true,
+      'player1' : player.id == 'player1',
+      'player2' : player.id == 'player2',
+      'active': player.isActive()
+      }">
     <div class="player-name">
         {{player.name}}
     </div>
