Added the concept of points

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -9,7 +9,6 @@
         {{player.name}}
     </div>
     <div class="player-points">
-        <!-- TODO: Render points. -->
-      <span>Points placeholder</span>
+      <span>Points: {{player.getPoints()}}</span>
     </div>
 </div>
