--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,4 +1,5 @@
 <div class="players">
     <app-player [player]="player1"></app-player>
+    <div class="player-spacer"></div>
     <app-player [player]="player2"></app-player>
 </div>
