--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,22 +1,29 @@
 .player {
-    display: inline-block;
-    width: 400px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    /* Placeholder border to avoid dom shifting. */
-    border: 4px solid transparent;
+  display: inline-block;
+  width: 400px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  /* Placeholder border to avoid dom shifting. */
+  border: 4px solid transparent;
 }
 
 .player.active {
-    border: 4px solid;
+  border: 4px solid;
 }
+
 .player1.active {
   border-color: var(--player1Color);
 }
+
 .player2.active {
   border-color: var(--player2Color);
 }
 
 .player-name {
-    font-size: 30px;
+  font-size: 40px;
+}
+
+.player-points {
+  margin-top: 10px;
+  font-size: 20px;
 }
