--- a/src/app/gameover/gameover.component.html
+++ b/src/app/gameover/gameover.component.html
@@ -2,5 +2,6 @@
   <div class="dialog-overlay"></div>
   <div class="dialog">
     {{winningPlayer.name}} won!
+    <button class="new-game" (click)="newGame()">New Game</button>
   </div>
 </div>
