--- a/src/app/gameover/gameover.component.scss
+++ b/src/app/gameover/gameover.component.scss
@@ -20,3 +20,10 @@
   box-shadow: 5px 10px 20px;
   padding: 40px;
 }
+
+.new-game {
+  display: block;
+  margin: auto;
+  padding: 10px 30px;
+  margin-top: 20px;
+}
