Reskinned the UI

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,4 +1,7 @@
 :root {
-  --player1Color: cornflowerblue;
-  --player2Color: coral;
+  --background_color: #333;
+  --foreground_color: #fff;
+  --hover_color: #555;
+  --player_1_color: cornflowerblue;
+  --player_2_color: coral;
 }
