--- a/src/app/gameover/gameover.component.scss
+++ b/src/app/gameover/gameover.component.scss
@@ -10,14 +10,13 @@
 
 .dialog {
   font-size: 100px;
-  background: white;
+  background: var(--background_color);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 10px;
-  border: 5px solid black;
-  box-shadow: 5px 10px 20px;
+  border-radius: 30px;
+  border: 5px solid var(--foreground_color);
   padding: 40px;
 }
 
