--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,9 @@
   --background_color: #333;
   --foreground_color: #fff;
   --hover_color: #555;
+
+  --header_height: 100px;
+
   --player_1_color: cornflowerblue;
   --player_2_color: coral;
 }
