--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-gameover></app-gameover>
+<div class="header">
+  <img src="/images/banner.png">
+  <div class="title">Strike</div>
+</div>
 <app-players></app-players>
 <app-board></app-board>
