--- a/src/app/players/players.component.scss
+++ b/src/app/players/players.component.scss
@@ -1,8 +1,9 @@
 .players {
-    margin-bottom: 40px;
+  margin-top: var(--header_height);
+  margin-bottom: 40px;
 }
 
 .player-spacer {
-    display: inline-block;
-    width: 40px;
+  display: inline-block;
+  width: 40px;
 }
