Enabled strict compile

--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -9,5 +9,5 @@
   <!-- TODO: Render terrain once supported. -->
 
   <!-- Render the piece. -->
-  <app-piece [piece]="cell.getPiece()"></app-piece>
+  <app-piece [piece]="cell.getPiece()!"></app-piece>
 </div>
