Tweaked piece name css

--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -5,5 +5,5 @@
       'player1' : piece.player.id == 'player1',
       'player2' : piece.player.id == 'player2'
       }">
-  {{piece.name}}
+  <div class="piece-name">{{piece.name}}</div>
 </div>
