--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -5,6 +5,7 @@
   margin-top: -4px;
   margin-left: -4px;
   border-radius: 30px;
+  position: relative;
 }
 
 .piece.player1 {
@@ -13,4 +14,11 @@
 
 .piece.player2 {
   border-color: var(--player_2_color);
+}
+
+.piece-name {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 15%;
 }
