--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -4,6 +4,11 @@
   width: 100px;
   height: 100px;
   display: inline-block;
+  position: relative
+}
+
+.cell:hover {
+  background: var(--hover_color);
 }
 
 .cell-selected {
@@ -14,8 +19,15 @@
   margin-left: -10px;
   margin-top: -10px;
   position: absolute;
+  z-index: 1;
 }
 
-.cell:hover {
-  background: var(--hover_color);
+.cell-available-move {
+  border: solid var(--foreground_color) 3px;
+  width: 80px;
+  height: 80px;
+  border-radius: 80px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
