--- a/src/app/gameover/gameover.component.scss
+++ b/src/app/gameover/gameover.component.scss
@@ -6,6 +6,7 @@
   opacity: .5;
   top: 0;
   left: 0;
+  z-index: 10;
 }
 
 .dialog {
@@ -18,6 +19,7 @@
   border-radius: 30px;
   border: 5px solid var(--foreground_color);
   padding: 40px;
+  z-index: 11;
 }
 
 .new-game {
