Added a move symbol

--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -5,7 +5,9 @@
       }"
     (click)="select()">
   <div *ngIf=cell.isSelected() class="cell-selected"></div>
-  <div *ngIf=cell.isAvailableMove() class="cell-available-move"></div>
+  <div *ngIf=cell.isAvailableMove() class="cell-available-move">
+    <div class="cell-move-symbol">🕂</div>
+  </div>
 
   <!-- TODO: Render terrain once supported. -->
 
