--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -6,4 +6,5 @@
       'player2' : piece.player.id == 'player2'
       }">
   <div class="piece-name">{{piece.name}}</div>
+  <div class="piece-health">❤ {{piece.getHealth()}}</div>
 </div>
