--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -14,7 +14,6 @@
 
 .cell-selected {
   border: solid var(--foreground_color) 6px;
-  border-radius: 36px;
   width: 108px;
   height: 108px;
   margin-left: -10px;
@@ -23,32 +22,45 @@
   z-index: 1;
 }
 
+.cell-selected.cell-has-piece {
+  border-radius: 60px;
+  width: 108px;
+  height: 108px;
+  margin-left: -10px;
+  margin-top: -10px;
+}
+
 .cell-available-move {
+  border: solid var(--foreground_color) 1px;
   width: 80px;
   height: 80px;
   border-radius: 80px;
   position: absolute;
   top: 14px;
   left: 14px;
-  background: lightslategray;
+  cursor: pointer;
 }
 
-.cell-move-symbol {
-  font-size: 50px;
-  margin-top: 3px;
+.cell-move-symbol-1, .cell-move-symbol-2 {
+  font-size: 35px;
+  position: absolute;
+  top: 18px;
+  left: 20px;
+}
+.cell-move-symbol-2 {
+  transform: rotate(90deg);
 }
 
 .cell-available-attack {
-  width: 80px;
-  height: 80px;
-  border-radius: 80px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
   position: absolute;
-  top: 14px;
-  left: 14px;
   background: firebrick;
+  cursor: pointer;
 }
 
 .cell-attack-symbol {
   font-size: 45px;
-  margin-top: 14px;
+  margin-top: -5px;
 }
