Added a selection panel and new font

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -2,6 +2,7 @@
   /* Unsure about this display value. */
   display: inline-grid;
   border: solid var(--foreground_color) 1px;
+  vertical-align: top;
 }
 
 app-cell{
