--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,11 +1,12 @@
 .player {
   display: inline-block;
-  width: 400px;
+  width: 450px;
   padding-top: 10px;
   padding-bottom: 10px;
   /* Placeholder border to avoid dom shifting. */
   border: 4px solid transparent;
   border-radius: 30px;
+  text-transform: uppercase;
 }
 
 .player.active {
