--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,13 @@
   src: url(Horizon-nMeM.ttf);
 }
 
+@font-face {
+  font-family: ExcelsiorSans;
+  src: url(ExcelsiorSans.ttf);
+}
+
 body {
-  font-family: Horizon;
+  font-family: ExcelsiorSans;
   text-align: center;
   margin: 0;
   padding: 40px;
@@ -16,11 +21,13 @@ body {
 }
 
 button {
-  font-family: Horizon;
+  font-family: ExcelsiorSans;
   background: var(--foreground_color); // Intentional flip
   color: var(--background_color);
   border: 2px solid var(--background_color);
-  font-size: 20px;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: bold;
   cursor: pointer;
 }
 button:hover {
