--- a/src/app/selected/selected.component.scss
+++ b/src/app/selected/selected.component.scss
@@ -2,10 +2,64 @@
   display: inline-block;
   width: 300px;
   margin-right: 40px;
-  border: 1.5px solid white;
-  height: 600px;
+  border: 1.5px solid var(--foreground_color);
   position: relative;
-  padding: 10px;
   text-transform: uppercase;
+  font-size: 40px;
+}
+
+.nothing-selected-image {
+  width: 100%;
+  display: block;
+}
+
+.selected-piece-name {
+  text-align: left;
+  padding: 10px 20px 2px 20px;
+}
+
+.selected-piece-type {
+  color: #999;
+  font-size: 20px;
+  text-align: left;
+  padding: 0px 20px 10px 20px;
+}
+
+.selected-piece-image-container {
+  width: 100%;
+  height: 300px;
+  background: #666;
+  position: relative;
+  border-top: 1px solid var(--foreground_color);
+  border-bottom: 1px solid var(--foreground_color);
+}
+
+.selected-piece-points {
+  font-size: 40px;
+  position: absolute;
+  right: 20px;
+  top: 10px;
+}
+
+.selected-piece-image {
+  width: 100%;
+  top: 50%;
+  position: absolute;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.selected-piece-stats {
   font-size: 30px;
+}
+
+.selected-piece-stat {
+  display: inline-block;
+  padding: 10px 12px 4px 12px;
+  border-right: 1px solid var(--foreground_color);
+}
+
+.selected-piece-stat:last-child {
+  display: inline-block;
+  border-right: none;
 }
