--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -29,7 +29,7 @@
           AT: {{getSelected()!.getPiece()!.attack}}
         </div>
         <div class="selected-piece-stat">
-          RG: {{getSelected()!.getPiece()!.attackRange}}
+          AR: {{getSelected()!.getPiece()!.attackRange}}
         </div>
         <div class="selected-piece-stat">
           MV: {{getSelected()!.getPiece()!.movement}}
