--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -2,6 +2,7 @@
     *ngIf="piece"
     [ngClass]="{
       'piece': true,
+      'moved': piece.hasMoved(),
       'player1' : piece.player.id == 'player1',
       'player2' : piece.player.id == 'player2'
       }">
