rounded corners on selection panel

--- a/src/app/selected/selected.component.scss
+++ b/src/app/selected/selected.component.scss
@@ -6,6 +6,8 @@
   position: relative;
   text-transform: uppercase;
   font-size: 40px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .nothing-selected-image {
