Tracking activated pieces instead of move/attack

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ body {
   padding: 40px;
   background-color: var(--background_color);
   color: var(--foreground_color);
+  white-space: nowrap;
 }
 
 button {
