--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,6 +1,6 @@
 .player {
   display: inline-block;
-  width: 450px;
+  width: 49%;
   padding-top: 10px;
   padding-bottom: 10px;
   /* Placeholder border to avoid dom shifting. */
