--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
 
 <div class="left-panel">
   <app-selected></app-selected>
+  <audio class="audio-controls" controls loop>
+    <source src="/audio/rusted_sands.mp3" type="audio/mpeg">
+  </audio>
 </div>
 
 <div class="right-panel">
