Added passable triangles but not tied to points

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -8,7 +8,15 @@
     {{player.name}}
   </div>
   <div class="player-points">
-    <span>Points: {{player.getPoints()}}</span>
+    <!--<div class="arrows">▲▼▲▼▲▼▲</div> -->
+    <div class="arrow-up"></div>
+    <div class="arrow-down"></div>
+    <div class="arrow-up"></div>
+    <div class="arrow-down"></div>
+    <div class="arrow-up"></div>
+    <div class="arrow-down"></div>
+    <div class="arrow-up"></div>
+    <div class="points-value">{{player.getPoints()}}</div>
   </div>
 
   <!-- Active player content -->
