--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -22,6 +22,17 @@
   z-index: 1;
 }
 
+.cell-terrain {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+.cell-terrain-image {
+  width: 100%;
+}
+
 .cell-selected.cell-has-piece {
   border-radius: 60px;
   width: 108px;
