Trying to deal with OS differences

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -33,6 +33,7 @@
 
 .player-name {
   font-size: 40px;
+  height: 45px;
 }
 
 .player-points {
@@ -114,4 +115,5 @@
   position: absolute;
   right: 20px;
   top: 10px;
+  height: 40px;
 }
