--- a/src/app/selected/selected.component.scss
+++ b/src/app/selected/selected.component.scss
@@ -17,11 +17,13 @@
 .selected-piece-name {
   text-align: left;
   padding: 10px 20px 2px 20px;
+  height: 50px;
 }
 
 .selected-piece-type {
   color: #999;
   font-size: 20px;
+  height: 20px;
   text-align: left;
   padding: 0px 20px 10px 20px;
 }
@@ -61,6 +63,7 @@
   display: inline-block;
   padding: 10px 12px 4px 12px;
   border-right: 1px solid var(--foreground_color);
+  height: 35px;
 }
 
 .selected-piece-stat:last-child {
@@ -71,4 +74,5 @@
 .additional-details {
   font-size: 20px;
   padding: 10px;
+  height: 20px;
 }
