--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -62,7 +62,8 @@
   font-size: 35px;
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .cell-move-symbol-2 {
