--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -9,6 +9,7 @@
   font-size: 20px;
   cursor: pointer;
   background-color: var(--background_color);
+  z-index: 10;
 }
 
 .piece.player1 {
@@ -33,8 +34,19 @@
   bottom: 8%;
 }
 
+.piece-selected-buttons {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .cancel-selection {
+  position: absolute;
+  padding: 0;
   width: 50px;
   height: 50px;
   border-radius: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -45px;
 }
