--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -9,9 +9,17 @@
   <div class="piece-name">{{piece.name}}</div>
   <div class="piece-health">❤ {{piece.getHealth()}}</div>
   <div *ngIf="piece.isSelected()" class="piece-selected-buttons">
-    <button class="cancel-selection"
-        (click)="onCancel($event)">
+    <button class="piece-selected-button cancel-selection"
+        (click)="cancel($event)">
       🗙
+    </button>
+    <button class="piece-selected-button confirm-move"
+        (click)="confirmMove($event)">
+      ☩
+    </button>
+    <button class="piece-selected-button confirm-attack"
+        (click)="confirmAttack($event)">
+        ⤱
     </button>
   </div>
 </div>
