--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -9,7 +9,6 @@
   font-size: 20px;
   cursor: pointer;
   background-color: var(--background_color);
-  z-index: 10;
 }
 
 .piece.player1 {
@@ -38,15 +37,29 @@
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: 10;
 }
 
-.cancel-selection {
+.piece-selected-button {
   position: absolute;
   padding: 0;
   width: 50px;
   height: 50px;
   border-radius: 25px;
+}
+
+.cancel-selection {
   left: 50%;
   transform: translateX(-50%);
   top: -45px;
+}
+
+.confirm-move {
+  left: -40px;
+  top: -20px;
+}
+
+.confirm-attack {
+  right: -40px;
+  top: -20px;
 }
