Switched to a move icon.

--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -6,8 +6,7 @@
 
   <div *ngIf=cell.isAvailableMove() class="cell-available-move">
     <!-- alternatives: ⁜, ☩, 🕂, ↔, ↕, ⟷ -->
-    <div class="cell-move-symbol-1">☩</div>
-    <!--<div class="cell-move-symbol-2">⟷</div>-->
+    <img src="/images/icon/move_icon.ico">
   </div>
 
   <!-- Render the piece. -->
