--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -15,7 +15,7 @@
     </button>
     <button class="piece-selected-button confirm-move"
         (click)="confirmMove($event)">
-      ☩
+      <img src="/images/icon/move_icon.ico">
     </button>
     <button class="piece-selected-button confirm-attack"
         (click)="confirmAttack($event)">
