Added the attack and cancel icons.

--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -15,6 +15,6 @@
   <!-- Render this as an overlay on the piece. -->
   <div *ngIf=cell.isAvailableAttack() class="cell-available-attack">
     <!-- alternative: ⚔, ⤲ -->
-    <div class="cell-attack-symbol">⤱</div>
+    <img src="/images/icon/attack_icon.png">
   </div>
 </div>
