--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -11,7 +11,7 @@
   <div *ngIf="piece.isSelected()" class="piece-selected-buttons">
     <button class="piece-selected-button cancel-selection"
         (click)="cancel($event)">
-      <img src="/images/icon/cancel_icon.png">
+      <img src="/images/icon/cancel_icon_2.png">
     </button>
     <button class="piece-selected-button confirm-move"
         (click)="confirmMove($event)">
@@ -20,6 +20,14 @@
     <button class="piece-selected-button confirm-attack"
         (click)="confirmAttack($event)">
       <img src="/images/icon/attack_icon.png">
+    </button>
+    <button class="piece-selected-button rotate-cw"
+        (click)="rotateClockwise($event)">
+      <img src="/images/icon/rotate_icon.ico">
+    </button>
+    <button class="piece-selected-button rotate-ccw"
+        (click)="rotateCounterClockwise($event)">
+      <img src="/images/icon/rotate_icon.ico">
     </button>
   </div>
 </div>
